[tool.poetry]
name = "tyknn"
version = "0.1.0"
description = ""
authors = ["peacemo <carlchenxq@qq.com>"]
readme = "README.md"
packages = [{include = "ty_knn"}]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.24.3"


[[tool.poetry.source]]
name = "mirrors"
url = "https://mirrors.bfsu.edu.cn/pypi/web/simple/"
default = true
secondary = false


[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"
numpy = "^1.24.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
